Fix jumping on drag end (by replacing gaps with margins :/)

--- a/app/global.scss
+++ b/app/global.scss
@@ -36,9 +36,19 @@ body {
   margin: 0;
   display: grid;
   background-color: var(--colorBg2);
-  // color: var(--colorText);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: var(--colorText);
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
 }
 
 h1,
