--- a/components/board/board.module.scss
+++ b/components/board/board.module.scss
@@ -6,6 +6,7 @@
   margin-inline: auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  gap: var(--spacingMd);
   justify-content: center;
+  align-items: start;
 }
